# bci-pipeline-demo

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/type-honesty/: SKILL.md
.agents/skills/whole-system-refactor-planning/: SKILL.md
bci/: __init__.py  main.py
bci/config/: __init__.py
bci/decoder/: __init__.py  base.py  csp.py  deep.py  lda.py  ssvep.py  transformer.py  transformer_bert.py
bci/epocher/: __init__.py
bci/gui/: __init__.py  batch_tab.py  main_window.py  session_loader.py  stream_tab.py  worker.py
bci/gui/widgets/: __init__.py  decode_page.py  epoch_page.py  info_panel.py  main_page.py  preprocess_page.py  result_panel.py  spectrum.py  step_strip.py  topomap.py  waveform.py
bci/loader/: __init__.py
bci/pipeline/: __init__.py
bci/preprocessor/: __init__.py
bci/processor/: __init__.py  offline.py  online.py
bci/source/: __init__.py  base.py  file_source.py  readers.py  session_source.py  stream_source.py  types.py
bci/streaming/: __init__.py  sliding_window.py
bci/tests/: __init__.py  test_decoder.py  test_processor.py  test_session.py  test_session_loader.py  test_sliding_window.py  test_source.py  test_stream_worker_sw.py  test_tabs.py  test_transformer.py  test_transformer_bert.py  test_widgets.py  test_worker.py
docs/superpowers/plans/: 2026-06-11-remove-eegdata.md  2026-06-12-refactor-cleanup.md
docs/superpowers/specs/: 2026-06-12-refactor-cleanup-design.md
