[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bci-pipeline"
version = "1.0.0"
description = "End-to-end EEG signal processing and BCI decoding toolkit"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "mne>=1.7",
    "scikit-learn>=1.5",
    "pyyaml>=6.0",
    "pyqt6>=6.11.0",
    "torch>=2.12.0",
]

[project.scripts]
bci = "bci.main:main"

[project.optional-dependencies]
dev = [
    "ipython>=9.14.1",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "pyright>=1.1.400",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
